--- a/pom.xml
+++ b/pom.xml
@@ -352,7 +352,7 @@
         <dependency>
             <groupId>com.github.fakemongo</groupId>
             <artifactId>fongo</artifactId>
-            <version>2.2.0-RC2</version>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
